# tabbed

./: .gitignore  CMakeLists.txt  LICENSE  build.bat  main.cpp  names_suggesions.txt  sympell.h
include/autocomplete/: autocomplete.hpp
include/automation/: automation.hpp  focus_changed_listener.hpp  keyboard_input.hpp  ui_element_manager.hpp  window_manager.hpp
include/corrector/: corrector.hpp
include/gui/: gui.hpp
src/: CMakeLists.txt  main.cpp  sympell.h
src/app/: CMakeLists.txt  tabbed.cpp
src/autocomplete/: CMakeLists.txt  autocomplete.cpp
src/automation/: CMakeLists.txt  automation.cpp  keyboard_input.cpp  ui_element_manager.cpp  window_manager.cpp
src/corrector/: CMakeLists.txt  corrector.cpp
src/gui/: CMakeLists.txt  gui.cpp
